fix FAQ expand icon on mobile

--- a/assets/theme/css/ps-theme.css
+++ b/assets/theme/css/ps-theme.css
@@ -297,7 +297,9 @@ body.huxley-authenticated .huxley-myaccount {
     	background: var(--psorange);
 	text-align: center;
 	position: absolute;
-    	right: 20px;
+    	right: 15px;
+	top: 0px;
+	margin: 1rem auto;
 	-webkit-transition: all 0.3s linear;
     	-moz-transition: all 0.3s linear;
     	-o-transition: all 0.3s linear;
